# otus-cpp-hw_05

./: .travis.yml  CMakeLists.txt  build.sh  main.cpp
matrix/: dischmatrix.h
matrsrc/: dischmatrix.h
tests/: test_starter.cpp
